[package]
name = "onnx_to_kornia_cuda"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
argh = { workspace = true }
kornia-tensor.workspace = true
kornia.workspace = true
ort-sys = { version = "2.0.0-rc.9" }
ort = { version = "2.0.0-rc.9", features = [
    "load-dynamic",
    "half",
], default-features = false }
rerun = { workspace = true }
cudarc = { version = "0.12", features = [
   "cuda-version-from-build-system", 
], default-features = true}

